added get products by category and brand
